[package]
name = "libmm"
version = "0.1.0"
authors = ["Georgy Firsov <gfirsov007@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/GeorgyFirsov/libmm"
license-file = "LICENSE"

[lib]
name = "libmm"
path = "./src/lib.rs"

[dependencies]

# For configuration
serde_json = "1.0.91"

# Repository support
git2 = "0.15"
dirs = "4.0.0"
